cluster_module/vpc.tf
resource "aws_vpc" "main" {
    cidr_block = "10.0.0.0/16"

    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name = "${var.enviorment}-main"
    }
}

resource "aws_subnet" "private_zone1" {
    vpc_id              = aws_vpc.main.id
    cidr_block          = "10.0.0.0/19"
    availability_zone   = var.zone1

    tags = {
        "Name"                               = "${var.enviorment}-private-${var.zone1}"
        "kubernetes.io/role/internal-elb"    = "1"
    }
}

resource "aws_subnet" "private_zone2" {
    vpc_id              = aws_vpc.main.id
    cidr_block          = "10.0.32.0/19"
    availability_zone   = var.zone2

    tags = {
        "Name"                               = "${var.enviorment}-private-${var.zone2}"
        "kubernetes.io/role/internal-elb"    = "1"
    }
}

resource "aws_subnet" "public_zone1" {
    vpc_id              = aws_vpc.main.id
    cidr_block          = "10.0.64.0/19"
    availability_zone   = var.zone1
    map_public_ip_on_launch = true

    tags = {
        "Name"                               = "${var.enviorment}-public-${var.zone1}"
        "kubernetes.io/role/elb"             = "1"
    }
}

resource "aws_subnet" "public_zone2" {
    vpc_id              = aws_vpc.main.id
    cidr_block          = "10.0.96.0/19"
    availability_zone   = var.zone2
    map_public_ip_on_launch = true

    tags = {
        "Name"                               = "${var.enviorment}-public-${var.zone2}"
        "kubernetes.io/role/elb"             = "1"
    }
}
